Kubernetes-Manifests-file copy/Database/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: three-tier
  name: mongo  # ← Changé de mongo-db-svc à mongo
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - name: mongodb
    protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
  clusterIP: None
